--- a/templates/post.html
+++ b/templates/post.html
@@ -5,24 +5,20 @@
 {% endblock %}
 
 {% block body %}
-<h1>Posts</h1>
 
-<hr>
-<form action="/posts" method="POST">
-    Title: <input type="text" name="title">
-    Body: <textarea name="body" id="" cols="30" rows="10"></textarea>
-    <button>Submit</button>
-</form>
-<hr>
+    <a href="/posts/new" class="btn btn-primary">Add Post</a>
+    <br><br>
 
-{% for post in posts %}
+    {% for post in posts %}
 
-<h2>{{ post.title }}</h2>
-{% if post.author %}
-<h4>By : {{post.author}}</h4>
-{% endif %}
+        <h2>{{ post.title }}</h2>
+        {% if post.author %}
+        <h4>By : {{post.author}}</h4>
+        {% endif %}
 
-<p>{{ post.body }}</p>
+        <p>{{ post.body }}</p>
 
-{% endfor %}
+        <hr>
+
+    {% endfor %}
 {% endblock %}
