--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,17 @@
 {% endblock %}
 
 {% block body %} 
-    <h1>Hello World to flask app</h1>
+<br>
+<h1>Home Page</h1>
+<br>
+<div class="jumbotron">
+   
+        <h1>Welcome</h1>
+        <p>Welcome to the Digizigs Blog! Here we'll be talking about everything computer science. Basics, framesworkds, machine learning, other data science stuff, any new tech or findings, and pretty much anything computer science related.</p>
+        <p>Go visit us at our website <a href="http://www.digizigs.com">digizigs.com</a> to check out more cool stuff beyond just blogs.</p>
+        <p>
+            <a class="btn btn-primary" href="/posts" role="button">Go To Posts &raquo;</a>
+        </p>
+  
+</div>
 {% endblock %}
