--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,3 +5,12 @@ body {
 .navbar{
     border-radius: 0 !important;
 }
+
+h1{
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.post-body{
+    margin-top: 30px;
+}
