--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">FlaskCrudApp</a>
+                <a class="navbar-brand" href="/">FlaskCrudApp</a>
               </div>
           
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,7 +42,8 @@
         {% block body %} {% endblock %}
        </div>
         
-
+        
+        {{ moment.include_moment() }}
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="{{url_for('static',filename='js/main.js')}}"></script>
     </body>
