--- a/templates/new.html
+++ b/templates/new.html
@@ -8,10 +8,21 @@
 <h1>Add Posts</h1>
 
 <br>
-<form action="/posts" method="POST">
-    Title: <input type="text" name="title">
-    Body: <textarea name="body" id="" cols="30" rows="10"></textarea>
-    <button>Submit</button>
+<form action="/post/new" method="POST">
+    <label for="title">Title:</label>
+    <input class="form-control" type="text" name='title' id='title' placeholder="Enter Title" aria-label="Enter Title">
+        
+    <br>
+    <label for="author">Author:</label>
+    <input class="form-control" type="text" name='author' id='author' placeholder="Enter Author" aria-label="Enter Author">
+    
+    <br>
+    <label for="content">Post:</label>
+    <textarea class="form-control" name='body' id="body" placeholder="Enter Content" aria-label="Enter Content" rows="10"></textarea>
+        
+    <br>
+    <button class="btn btn-primary">Submit Post</button>
+    <a href="/posts" class="btn btn-default">Back</a>
 </form>
 
 {% endblock %}
