--- a/templates/post.html
+++ b/templates/post.html
@@ -6,19 +6,27 @@
 
 {% block body %}
 
-    <a href="/posts/new" class="btn btn-primary">Add Post</a>
+    <a href="/post/new" class="btn btn-primary">Add Post</a>
     <br><br>
 
     {% for post in posts %}
 
         <h2>{{ post.title }}</h2>
-        {% if post.author %}
-        <h4>By : {{post.author}}</h4>
-        {% endif %}
 
-        <p>{{ post.body }}</p>
+        {% if post.author %}
+            <small>Posted by : By : {{post.author}} on {{post.created_at}}</small>
+            
+        {% endif %}
+        
+        <br>
+
+        <div class="post-body">
+            <p>{{ post.body }}</p>
+        </div>
+
+        <a href="/post/edit/{{post.id}}">Edit</a>
+        <a href="/post/delete/{{post.id}}" style="margin-left: 10px;">Delete</a>
 
         <hr>
-
     {% endfor %}
 {% endblock %}
