--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,3 +14,11 @@ h1{
 .post-body{
     margin-top: 30px;
 }
+
+.post-title{
+    text-decoration: none;
+}
+
+.post-title:hover{
+    text-decoration: none;
+}
